Fix Banner Alignment

--- a/css/project-request.css
+++ b/css/project-request.css
@@ -2,7 +2,7 @@
 	display: none;
 }
 .directbanner{
-	margin-top: -100px;
+	margin-top: -200px;
 	float: left;
 }
 .skualign {
